Reactivity added Pegboard will no longer overflow onto extra lines Submit button is no longer staticlly placed inside its parent

--- a/src/styles/colorbox.scss
+++ b/src/styles/colorbox.scss
@@ -16,11 +16,11 @@
 }
 
 .gameboard-colorbox {
-    &-wrapper {
+    &__wrapper {
         display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        margin: 50px;
+        height: 150px;
+        justify-content: space-evenly;
+        padding: 35px;
     }
     
     &-background {
