--- a/src/styles/game.scss
+++ b/src/styles/game.scss
@@ -1,56 +1,58 @@
 .game {
-    display: grid;
-    grid-template-columns: [s sidebar-s] .1fr [sidebar-e colorboard-s] 1fr [colorboard-e pegboard-s] .3fr [pegboard-e e];
-    grid-column-gap: 20px;
-    height: 100vh;
-
-    &__header {
-      grid-column: s/e;
-      height: 13vh;
-    }
-
-    &__sidebar {
-      grid-column: sidebar-s/sidebar-e;
-      height: 87vh;
-      margin-left: 20px;
-    }
-
-    &__colorboard {
-      overflow: auto;
-      grid-column: colorboard-s/colorboard-e;
-      border-radius: 5px;
-      background-color: #4d4d4d;
-      height: 81vh;
-    }
-    
-    &__pegboard {
-      overflow: hidden;
-      grid-column: pegboard-s/pegboard-e;
-      border-radius: 5px;
-      background-color: #75aa28;
-      margin-right: 20px;
-      height: 81vh;
-    }
-
-    &__submit {
-      margin-left: 1200px;
-      margin-bottom: 20px;
-      border: none;
-      background-color: #75aa28;
-      color: white;
-      height: 50px;
-      width: 100px;
-      border-radius: 5px;
-      font-size: 20px;
-      font-weight: bold;
-
-      &:hover {
-          cursor: pointer;
-          color: #4d4d4d;
-      }
-    }
+  height: 100vh;
+  
+  &__header {
+    width: 100%;
+    height: 13vh;
+  }
 }
 
+.gameboard-wrapper {
+  display: flex;
+  justify-content: space-evenly;
+
+  &__sidebar {
+    flex-shrink: 4;
+    height: 87vh;
+  }
+
+  &__colorboard {
+    flex-shrink: 5;
+    overflow: auto;
+    border-radius: 5px;
+    background-color: #4d4d4d;
+    height: 81vh;
+    width: 1300px;
+  }
+  
+  &__pegboard {
+    flex-shrink: 0;
+    overflow: hidden;
+    border-radius: 5px;
+    background-color: #75aa28;
+    margin-right: 20px;
+    height: 81vh;
+    width: 380px;
+  }
+
+  &__submit {
+    margin-left: 90%;
+    margin-bottom: 20px;
+    border: none;
+    background-color: #75aa28;
+    color: white;
+    height: 50px;
+    width: 100px;
+    border-radius: 5px;
+    font-size: 20px;
+    font-weight: bold;
+
+    &:hover {
+        cursor: pointer;
+        color: #4d4d4d;
+    }
+  }
+}
 
 
 .header {
